# fpocket

./: CMakeLists.txt  conanfile.py
getopt_long/: getopt.c
headers/: asa.h  dparams.h  fparams.h  mdparams.h  mdpbase.h  mdpout.h  memhandler.h  neighbor.h  read_mmcif.h  refine.h  rpdb.h  topology.h  tparams.h  utils.h  voronoi.h  write_visu.h
src/: check.c  descriptors.c  fparams.c  fpout.c  mdparams.c  mdpocket.c  neighbor.c  pertable.c  pocket.c  read_mmcif.c  refine.c  rpdb.c  topology.c  tpocket.c  utils.c  voronoi.c  voronoi_lst.c  writepocket.c
